# commitment-conservation

./: .aider.chat.history.md  .aider.input.history  .gitignore  CITATION.cff  CLAUDE.md  HF_README_HEADER.txt  LICENSE.md  QUICKNOTES.md  README.md  REPRODUCIBILITY.md  RESEARCH_CHRONICLE.md  RUN_LOG.md  XLICENSE.md  XREADME.md
autoresearch/: crew.py
corpus/: canonical_corpus.json
experiments/: README.md  TEMPLATE.md  manifest.md
experiments/EXP-001/: log.md
experiments/EXP-002/: log.md  run.json
experiments/EXP-003/: harness_snapshot.py  log.md
experiments/EXP-004/: adversarial_corpus_exp004.json  harness_snapshot.py  run.json
experiments/EXP-006/: log.md  (+2 more)
foundational/: experiment_design_v2.md
harness/: EXP.md  README.md  analyze.py  compare_enforcement.py  pyproject.toml  quick_demo.py  requirements.txt  run_convergence_v2.py  run_experiments.py
harness/outputs/: .gitkeep
harness/prompts/: step_b.txt  step_b_escl.txt
harness/src/: __init__.py  config.py  deterministic_pipeline.py  harness.py  metrics.py  plotting.py  samples.py  test_harness.py
harness/tests/: test_full_harness.py  test_harness.py
operational-harness/: Harnesstest.ini  compare_enforcement.py  environment.yml  pyproject.toml
paper_experiment_results/: CITATION.cff  combined_experimental_record.md  experiment_index.md  generate_figures.py  latex_header.tex
paper_harness/: README.md  paper.md  run_convergence.py  run_convergence_v2.py  run_corpus.py
runs/: experiment_results.json
working/: commitment_conservation_checkpoint.md  paper_update_checklist_main_paper_addendum.md
(+98 files in other folders)
